# ElevenLabs-music

./: README.md  main.py  pyproject.toml
docs/: ENV_FIX.md  FIX_TOKEN_AUTH.md  IMPLEMENTATION_SUMMARY.md  PLAN_API.md  PROMPT_API.md  QUICKSTART.md  RENDER_API.md  TIMEOUT_FIX.md
examples/: usage_examples.py
models/: __init__.py  plan.py  prompt.py  render.py
prompts/: comp_plan.json  system_prompt_eleven_music_3choice_wizard_prompt_architect_NEW.md  user_prompt.txt
routers/: __init__.py  plan.py  prompt.py  render.py
services/: __init__.py  plan_generator.py  prompt_generator.py  render_service.py
testing/: debug_env.py  test_agents.py  test_create_comp_plan.py  test_endpoints.py  test_plan_endpoint.py  test_postgres_mcp.py  test_postgres_mcp_interactive.py  test_prompt_endpoint.py  test_prompt_outputs.md  test_render_endpoint.py  test_render_music.py  test_service_direct.py
